--- a/.github/workflows/on-comment-test.yaml
+++ b/.github/workflows/on-comment-test.yaml
@@ -14,5 +14,7 @@ on:
 jobs:
   react-to-comment:
     if: github.event_name == 'issue_comment' && contains(github.event.comment.body, '/test_comment')
-  run: |
-    echo "Triggered by comment"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
