Match all branches
Signed-off-by: Rafal Czubak <rafal.czubak@area22.com>

--- a/.github/workflows/on-comment-test.yaml
+++ b/.github/workflows/on-comment-test.yaml
@@ -2,10 +2,10 @@ name: "On comment test workflow"
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "**"]
 
   pull_request:
-    branches: ["main"]
+    branches: ["main", "**"]
 
   issue_comment:
     types: [created]
