Add write to pull-requests
Signed-off-by: Rafal Czubak <rafal.czubak@area22.com>

--- a/.github/workflows/on-comment-test.yaml
+++ b/.github/workflows/on-comment-test.yaml
@@ -15,7 +15,7 @@ permissions:
   id-token: write
   contents: read
   issues: read
-  pull-requests: read
+  pull-requests: write
 
 jobs:
   react-to-comment:
