--- a/.github/workflows/on-comment-test.yaml
+++ b/.github/workflows/on-comment-test.yaml
@@ -32,7 +32,7 @@ jobs:
         startsWith(github.event.comment.body, '/build') ||
         startsWith(github.event.comment.body, '/test')
       )
-    uses: .github/workflows/post-pr-comment@main
+    uses: .github/workflows/post-pr-comment.yaml
     with:
       comment: "Action triggered by comment: ${{ github.event.comment.body }}: [View logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
     secrets: inherit
